[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/Chunk.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/SnowballBoss.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Mima.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/marisa.mp3" type="AudioStream" id=6]
[ext_resource path="res://audio/cirno-intro.mp3" type="AudioStream" id=7]
[ext_resource path="res://audio/cirno-bulk.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/MusicController.gd" type="Script" id=9]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/cirno-distort.mp3" type="AudioStream" id=11]
[ext_resource path="res://audio/mima.mp3" type="AudioStream" id=12]
[ext_resource path="res://scenes/Credits.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Cirno.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/DeathScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/Dialogue.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/SnowBallDia.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/End.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/MimaDia.tscn" type="PackedScene" id=19]

[node name="World" type="YSort"]
script = ExtResource( 1 )
Chunk = ExtResource( 2 )
SnowBallBoss = ExtResource( 4 )
Mima = ExtResource( 5 )
Cirno = ExtResource( 14 )
Credits = ExtResource( 13 )
End = ExtResource( 18 )
Death = ExtResource( 15 )
SnowDia = ExtResource( 17 )
CirnoDia = ExtResource( 16 )
MimaDia = ExtResource( 19 )

[node name="Chunks" type="YSort" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MusicController" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Marisa" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[node name="Mima" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 12 )
bus = "Music"

[node name="CirnoIntro" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 7 )
bus = "Music"

[node name="Cirno" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 8 )
bus = "Music"

[node name="SnowBallIntro" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 7 )
bus = "Music"

[node name="SnowBall" type="AudioStreamPlayer" parent="MusicController"]
stream = ExtResource( 11 )
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 10 )]

[connection signal="finished" from="MusicController/Marisa" to="MusicController" method="_on_Marisa_finished"]
[connection signal="finished" from="MusicController/Mima" to="MusicController" method="_on_Mima_finished"]
[connection signal="finished" from="MusicController/CirnoIntro" to="MusicController" method="_on_CirnoIntro_finished"]
[connection signal="finished" from="MusicController/Cirno" to="MusicController" method="_on_Cirno_finished"]
[connection signal="finished" from="MusicController/SnowBallIntro" to="MusicController" method="_on_SnowBallIntro_finished"]
[connection signal="finished" from="MusicController/SnowBall" to="MusicController" method="_on_SnowBall_finished"]
